--- a/schools.html
+++ b/schools.html
@@ -91,11 +91,13 @@
                     " /></a>
                         </div>
                         <!-- Mobile Nav Button ==== -->
-                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button" data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown" aria-expanded="false" aria-label="Toggle navigation">
-							<span></span>
-							<span></span>
-							<span></span>
-						</button>
+                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
+                            data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
                         <!-- Author Nav ==== -->
                         <div class="secondary-menu">
                             <div class="secondary-inner">
@@ -112,8 +114,8 @@
                                     <!-- Search Button ==== -->
                                     <li class="search-btn">
                                         <button id="quik-search-btn" type="button" class="btn-link">
-											<i class="fa fa-search"></i>
-										</button>
+                                            <i class="fa fa-search"></i>
+                                        </button>
                                     </li>
                                 </ul>
                             </div>
@@ -121,7 +123,8 @@
                         <!-- Search Box ==== -->
                         <div class="nav-search-bar">
                             <form action="#">
-                                <input name="search" value="" type="text" class="form-control" placeholder="Type to search" />
+                                <input name="search" value="" type="text" class="form-control"
+                                    placeholder="Type to search" />
                                 <span><i class="ti-search"></i></span>
                             </form>
                             <span id="search-remove"><i class="ti-close"></i></span>
@@ -220,7 +223,8 @@
                                     <div class="widget-post-bx">
                                         <div class="widget-post clearfix">
                                             <div class="ttr-post-media">
-                                                <img src="assets/images/blog/recent-blog/pic1.jpg" width="200" height="143" alt="" />
+                                                <img src="assets/images/blog/recent-blog/pic1.jpg" width="200"
+                                                    height="143" alt="" />
                                             </div>
                                             <div class="ttr-post-info">
                                                 <div class="ttr-post-header">
@@ -241,7 +245,8 @@
                                         </div>
                                         <div class="widget-post clearfix">
                                             <div class="ttr-post-media">
-                                                <img src="assets/images/blog/recent-blog/pic3.jpg" width="200" height="160" alt="" />
+                                                <img src="assets/images/blog/recent-blog/pic3.jpg" width="200"
+                                                    height="160" alt="" />
                                             </div>
                                             <div class="ttr-post-info">
                                                 <div class="ttr-post-header">
@@ -268,7 +273,7 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic1.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
@@ -298,7 +303,7 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic2.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
@@ -328,7 +333,7 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic3.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
@@ -358,11 +363,11 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic4.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
-                                                    <a href="#">Diploma in European Lang..</a>
+                                                    <a href="">Diploma in European Lang..</a>
                                                 </h5>
                                                 <span>School of European Lang..</span>
                                             </div>
@@ -389,7 +394,7 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic5.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
@@ -420,7 +425,7 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic4.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
@@ -451,7 +456,7 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic5.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
@@ -482,7 +487,7 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic3.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
@@ -513,7 +518,7 @@
                                         <div class="cours-bx">
                                             <div class="action-box">
                                                 <img src="assets/images/courses/pic3.jpg" alt="" />
-                                                <a href="#" class="btn">Read More</a>
+                                                <a href="/apply.html" class="btn">Apply</a>
                                             </div>
                                             <div class="info-bx text-center">
                                                 <h5>
@@ -571,7 +576,8 @@
                     <div class="container">
                         <div class="d-flex align-items-stretch">
                             <div class="pt-logo mr-auto">
-                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt="" width="30%" /></a>
+                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
+                                        width="30%" /></a>
                             </div>
                             <!-- <div class="pt-social-link">
 							<ul class="list-inline m-a0">
@@ -596,12 +602,13 @@
                                     <form class="subscription-form" action="" method="post">
                                         <div class="ajax-message"></div>
                                         <div class="input-group">
-                                            <input name="email" required="required" class="form-control" placeholder="Your Email Address" type="email" />
+                                            <input name="email" required="required" class="form-control"
+                                                placeholder="Your Email Address" type="email" />
                                             <span class="input-group-btn">
-                        <button name="submit" value="Submit" type="submit" class="btn">
-                          <i class="fa fa-arrow-right"></i>
-                        </button>
-                      </span>
+                                                <button name="submit" value="Submit" type="submit" class="btn">
+                                                    <i class="fa fa-arrow-right"></i>
+                                                </button>
+                                            </span>
                                         </div>
                                     </form>
                                 </div>
@@ -646,28 +653,36 @@
                                 <h5 class="footer-title">Our Gallery</h5>
                                 <ul class="magnific-image">
                                     <li>
-                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic1.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic1.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic2.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic2.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic3.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic3.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic4.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic4.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic5.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic5.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic6.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic6.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic7.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic7.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic8.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic8.jpg" alt="" /></a>
                                     </li>
                                 </ul>
                             </div>
@@ -681,7 +696,7 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                             © Copyright 2023. All Rights Reserved. |
                             <a target="_blank" href="https://www.templateshub.net">
-                By CodesPro Solutions</a>
+                                By CodesPro Solutions</a>
                         </div>
                     </div>
                 </div>
