--- a/blog-classic-sidebar.html
+++ b/blog-classic-sidebar.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="topbar-right">
                             <ul>
-                                <li><a href="register.html">Apply</a></li>
+                                <li><a href="apply.html">Apply</a></li>
                                 <li><a href="register.html">Students</a></li>
                                 <li><a href="register.html">Staff</a></li>
                             </ul>
@@ -957,7 +957,7 @@
     <script src="assets/vendors/owl-carousel/owl.carousel.js"></script>
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/contact.js"></script>
-    <script src="assets/vendors/switcher/switcher.js"></script>
+    <!-- <script src="assets/vendors/switcher/switcher.js"></script> -->
 </body>
 
 </html>
