--- a/error-404.html
+++ b/error-404.html
@@ -14,7 +14,7 @@
 
     <!-- OG -->
     <meta property="og:title" content="Redeemed Christian Bible College College Portal />
-    <meta property=" og:description " content="Redeemed Christian Bible College College Portal />
+    <meta property=" og:description " content=" Redeemed Christian Bible College College Portal />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no" />
 
@@ -61,7 +61,8 @@
                         <h2 class="error-title">404</h2>
                         <h5>The Page you were looking for, couldn't be found.</h5>
                         <p>
-                            The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.
+                            The page you are looking for might have been removed, had its name changed, or is
+                            temporarily unavailable.
                         </p>
                         <div class="">
                             <a href="index.html" class="btn m-r5">Preview</a>
@@ -87,7 +88,7 @@
     <script src="assets/vendors/owl-carousel/owl.carousel.js"></script>
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/contact.js"></script>
-    <script src="assets/vendors/switcher/switcher.js"></script>
+    <!-- <script src="assets/vendors/switcher/switcher.js"></script> -->
 </body>
 
 </html>
