--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <!-- OG -->
     <meta property="og:title" content="Redeemed Christian Bible College College Portal />
-    <meta property=" og:description " content="Redeemed Christian Bible College College Portal />
+    <meta property=" og:description " content=" Redeemed Christian Bible College College Portal />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no" />
 
@@ -65,7 +65,7 @@
                         </div>
                         <div class="topbar-right">
                             <ul>
-                                <li><a href="register.html">Apply</a></li>
+                                <li><a href="apply.html">Apply</a></li>
                                 <li><a href="register.html">Students</a></li>
                                 <li><a href="register.html">Staff</a></li>
                             </ul>
@@ -81,7 +81,9 @@
                             <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" /></a>
                         </div>
                         <!-- Mobile Nav Button ==== -->
-                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button" data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
+                            data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown"
+                            aria-expanded="false" aria-label="Toggle navigation">
                             <span></span>
                             <span></span>
                             <span></span>
@@ -111,7 +113,8 @@
                         <!-- Search Box ==== -->
                         <div class="nav-search-bar">
                             <form action="#">
-                                <input name="search" value="" type="text" class="form-control" placeholder="Type to search" />
+                                <input name="search" value="" type="text" class="form-control"
+                                    placeholder="Type to search" />
                                 <span><i class="ti-search"></i></span>
                             </form>
                             <span id="search-remove"><i class="ti-close"></i></span>
@@ -192,7 +195,8 @@
                                 <div class="widget widget_getintuch">
                                     <ul>
                                         <li>
-                                            <i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL 309382 New York
+                                            <i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL
+                                            309382 New York
                                         </li>
                                         <li>
                                             <i class="ti-mobile"></i>08030789185
@@ -218,7 +222,8 @@
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-7">
-                            <form class="contact-bx ajax-form" action="http://educhamp.themetrades.com/demo/assets/script/contact.php">
+                            <form class="contact-bx ajax-form"
+                                action="http://educhamp.themetrades.com/demo/assets/script/contact.php">
                                 <div class="ajax-message"></div>
                                 <div class="heading-bx left">
                                     <h2 class="title-head">Get In <span>Touch</span></h2>
@@ -231,7 +236,8 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Your Name</label>
-                                                <input name="name" type="text" required class="form-control valid-character" />
+                                                <input name="name" type="text" required
+                                                    class="form-control valid-character" />
                                             </div>
                                         </div>
                                     </div>
@@ -247,7 +253,8 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Your Phone</label>
-                                                <input name="phone" type="text" required class="form-control int-value" />
+                                                <input name="phone" type="text" required
+                                                    class="form-control int-value" />
                                             </div>
                                         </div>
                                     </div>
@@ -263,16 +270,22 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Type Message</label>
-                                                <textarea name="message" rows="4" class="form-control" required></textarea>
+                                                <textarea name="message" rows="4" class="form-control"
+                                                    required></textarea>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <div class="input-group">
-                                                <div class="g-recaptcha" data-sitekey="6Lf2gYwUAAAAAJLxwnZTvpJqbYFWqVyzE-8BWhVe" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback">
+                                                <div class="g-recaptcha"
+                                                    data-sitekey="6Lf2gYwUAAAAAJLxwnZTvpJqbYFWqVyzE-8BWhVe"
+                                                    data-callback="verifyRecaptchaCallback"
+                                                    data-expired-callback="expiredRecaptchaCallback">
                                                 </div>
-                                                <input class="form-control d-none" style="display: none" data-recaptcha="true" required data-error="Please complete the Captcha" />
+                                                <input class="form-control d-none" style="display: none"
+                                                    data-recaptcha="true" required
+                                                    data-error="Please complete the Captcha" />
                                             </div>
                                         </div>
                                     </div>
@@ -297,7 +310,8 @@
                     <div class="container">
                         <div class="d-flex align-items-stretch">
                             <div class="pt-logo mr-auto">
-                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt="" width="30%" /></a>
+                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
+                                        width="30%" /></a>
                             </div>
                             <!-- <div class="pt-social-link">
 							<ul class="list-inline m-a0">
@@ -322,7 +336,8 @@
                                     <form class="subscription-form" action="" method="post">
                                         <div class="ajax-message"></div>
                                         <div class="input-group">
-                                            <input name="email" required="required" class="form-control" placeholder="Your Email Address" type="email" />
+                                            <input name="email" required="required" class="form-control"
+                                                placeholder="Your Email Address" type="email" />
                                             <span class="input-group-btn">
                                                 <button name="submit" value="Submit" type="submit" class="btn">
                                                     <i class="fa fa-arrow-right"></i>
@@ -372,28 +387,36 @@
                                 <h5 class="footer-title">Our Gallery</h5>
                                 <ul class="magnific-image">
                                     <li>
-                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic1.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic1.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic2.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic2.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic3.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic3.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic4.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic4.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic5.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic5.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic6.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic6.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic7.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic7.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic8.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic8.jpg" alt="" /></a>
                                     </li>
                                 </ul>
                             </div>
@@ -432,7 +455,7 @@
     <script src="assets/vendors/owl-carousel/owl.carousel.js"></script>
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/contact.js"></script>
-    <script src="assets/vendors/switcher/switcher.js"></script>
+    <!-- <script src="assets/vendors/switcher/switcher.js"></script> -->
     <script src="../../www.google.com/recaptcha/api.js"></script>
 </body>
 
