--- a/forget-password.html
+++ b/forget-password.html
@@ -72,8 +72,8 @@
                             </div>
                             <div class="col-lg-12 m-b30">
                                 <button name="submit" type="submit" value="Submit" class="btn button-md">
-                    Submit
-                  </button>
+                                    Submit
+                                </button>
                             </div>
                         </div>
                     </form>
@@ -96,7 +96,7 @@
     <script src="assets/vendors/owl-carousel/owl.carousel.js"></script>
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/contact.js"></script>
-    <script src="assets/vendors/switcher/switcher.js"></script>
+    <!-- <script src="assets/vendors/switcher/switcher.js"></script> -->
 </body>
 
 </html>
