--- a/login.html
+++ b/login.html
@@ -2,133 +2,105 @@
 <html lang="en">
 
 <head>
-    <!-- META ============================================= -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
-    <meta name="robots" content="" />
+  <!-- META ============================================= -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="keywords" content="" />
+  <meta name="author" content="" />
+  <meta name="robots" content="" />
 
-    <!-- DESCRIPTION -->
-    <meta name="description" content="Redeemed  Christian Bible College College Portal" />
+  <!-- DESCRIPTION -->
+  <meta name="description" content="Redeemed  Christian Bible College College Portal" />
 
-    <!-- OG -->
-    <meta property="og:title" content="Redeemed  Christian Bible College College Portal" />
-    <meta property="og:description" content="Redeemed  Christian Bible College College Portal" />
-    <meta property="og:image" content="" />
-    <meta name="format-detection" content="telephone=no" />
+  <!-- OG -->
+  <meta property="og:title" content="Redeemed  Christian Bible College College Portal" />
+  <meta property="og:description" content="Redeemed  Christian Bible College College Portal" />
+  <meta property="og:image" content="" />
+  <meta name="format-detection" content="telephone=no" />
 
-    <!-- FAVICONS ICON ============================================= -->
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+  <!-- FAVICONS ICON ============================================= -->
+  <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
 
-    <!-- PAGE TITLE HERE ============================================= -->
-    <title>Redeemed Christian Bible College College Portal</title>
+  <!-- PAGE TITLE HERE ============================================= -->
+  <title>Redeemed Christian Bible College College Portal</title>
 
-    <!-- MOBILE SPECIFIC ============================================= -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- MOBILE SPECIFIC ============================================= -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!--[if lt IE 9]>
+  <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.min.js"></script>
       <script src="assets/js/respond.min.js"></script>
     <![endif]-->
 
-    <!-- All PLUGINS CSS ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/assets.css" />
+  <!-- All PLUGINS CSS ============================================= -->
+  <link rel="stylesheet" type="text/css" href="assets/css/assets.css" />
 
-    <!-- TYPOGRAPHY ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
+  <!-- TYPOGRAPHY ============================================= -->
+  <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
 
-    <!-- SHORTCODES ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
+  <!-- SHORTCODES ============================================= -->
+  <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
 
-    <!-- STYLESHEETS ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
+  <!-- STYLESHEETS ============================================= -->
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+  <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
 </head>
 
 <body id="bg">
-    <div class="page-wraper">
-        <div id="loading-icon-bx"></div>
-        <div class="account-form">
-            <div class="account-head" style="
+  <div class="page-wraper">
+    <div id="loading-icon-bx"></div>
+    <div class="account-form">
+      <div class="account-head" style="
             background-image: url(assets/images/students/two-reading.jpg);
             background-size: cover;
           ">
-                <a href="index.html"><img src="assets/images/REDEEMED-light.png" width="70%" alt="" /></a>
-            </div>
-            <div class="account-form-inner">
-                <div class="account-container">
-                    <div class="heading-bx left">
-                        <h2 class="title-head">Login to your <span>Account</span></h2>
-                        <p>
-                            Don't have an account?
-                            <a href="register.html" style="text-decoration: none; color: #2a166f">Create one here</a
-                >
-              </p>
-            </div>
-            <form class="contact-bx">
-              <div class="row placeani">
-                <div class="col-lg-12">
-                  <div class="form-group">
-                    <div class="input-group">
-                      <!-- <label>Your Name</label> -->
-                      <input
-                        name="dzName"
-                        type="text"
-                        required=""
-                        class="form-control"
-                        style="padding: 0 10px"
-                        placeholder="Your Name"
-                      />
-                    </div>
+        <a href="index.html"><img src="assets/images/REDEEMED-light.png" width="70%" alt="" /></a>
+      </div>
+      <div class="account-form-inner">
+        <div class="account-container">
+          <div class="heading-bx left">
+            <h2 class="title-head">Login to your <span>Account</span></h2>
+            <p>
+              Don't have an account?
+              <a href="register.html" style="text-decoration: none; color: #2a166f">Create one here</a>
+            </p>
+          </div>
+          <form class="contact-bx">
+            <div class="row placeani">
+              <div class="col-lg-12">
+                <div class="form-group">
+                  <div class="input-group">
+                    <!-- <label>Your Name</label> -->
+                    <input name="dzName" type="text" required="" class="form-control" style="padding: 0 10px"
+                      placeholder="Your Name" />
                   </div>
                 </div>
-                <div class="col-lg-12">
-                  <div class="form-group">
-                    <div class="input-group">
-                      <!-- <label>Your Password</label> -->
-                      <input
-                        name="dzEmail"
-                        type="password"
-                        class="form-control"
-                        required=""
-                        style="padding: 0 10px"
-                        placeholder="Your Password"
-                      />
-                    </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="form-group">
+                  <div class="input-group">
+                    <!-- <label>Your Password</label> -->
+                    <input name="dzEmail" type="password" class="form-control" required="" style="padding: 0 10px"
+                      placeholder="Your Password" />
                   </div>
                 </div>
-                <div class="col-lg-12">
-                  <div class="form-group form-forget">
-                    <div class="custom-control custom-checkbox">
-                      <input
-                        type="checkbox"
-                        class="custom-control-input"
-                        id="customControlAutosizing"
-                      />
-                      <label
-                        class="custom-control-label"
-                        for="customControlAutosizing"
-                        >Remember me</label
-                      >
-                    </div>
-                    <a href="forget-password.html" class="ml-auto"
-                      >Forgot Password?</a
-                    >
+              </div>
+              <div class="col-lg-12">
+                <div class="form-group form-forget">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="customControlAutosizing" />
+                    <label class="custom-control-label" for="customControlAutosizing">Remember me</label>
                   </div>
+                  <a href="forget-password.html" class="ml-auto">Forgot Password?</a>
                 </div>
-                <div class="col-lg-12 m-b30">
-                  <button
-                    name="submit"
-                    type="submit"
-                    value="Submit"
-                    class="btn button-md"
-                  >
-                    Login
-                  </button>
-                </div>
-                <!-- <div class="col-lg-12">
+              </div>
+              <div class="col-lg-12 m-b30">
+                <button name="submit" type="submit" value="Submit" class="btn button-md">
+                  Login
+                </button>
+              </div>
+              <!-- <div class="col-lg-12">
 							<h6>Login with Social media</h6>
 							<div class="d-flex">
 								<a class="btn flex-fill m-r5 facebook" href="#"><i class="fa fa-facebook"></i>Facebook</a>
@@ -136,27 +108,27 @@
                     </div>
                 </div> -->
             </div>
-            </form>
+          </form>
         </div>
+      </div>
     </div>
-    </div>
-    </div>
-    <!-- External JavaScripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/vendors/bootstrap/js/popper.min.js"></script>
-    <script src="assets/vendors/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/vendors/bootstrap-select/bootstrap-select.min.js"></script>
-    <script src="assets/vendors/bootstrap-touchspin/jquery.bootstrap-touchspin.js"></script>
-    <script src="assets/vendors/magnific-popup/magnific-popup.js"></script>
-    <script src="assets/vendors/counter/waypoints-min.js"></script>
-    <script src="assets/vendors/counter/counterup.min.js"></script>
-    <script src="assets/vendors/imagesloaded/imagesloaded.js"></script>
-    <script src="assets/vendors/masonry/masonry.js"></script>
-    <script src="assets/vendors/masonry/filter.js"></script>
-    <script src="assets/vendors/owl-carousel/owl.carousel.js"></script>
-    <script src="assets/js/functions.js"></script>
-    <script src="assets/js/contact.js"></script>
-    <script src="assets/vendors/switcher/switcher.js"></script>
+  </div>
+  <!-- External JavaScripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/vendors/bootstrap/js/popper.min.js"></script>
+  <script src="assets/vendors/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/vendors/bootstrap-select/bootstrap-select.min.js"></script>
+  <script src="assets/vendors/bootstrap-touchspin/jquery.bootstrap-touchspin.js"></script>
+  <script src="assets/vendors/magnific-popup/magnific-popup.js"></script>
+  <script src="assets/vendors/counter/waypoints-min.js"></script>
+  <script src="assets/vendors/counter/counterup.min.js"></script>
+  <script src="assets/vendors/imagesloaded/imagesloaded.js"></script>
+  <script src="assets/vendors/masonry/masonry.js"></script>
+  <script src="assets/vendors/masonry/filter.js"></script>
+  <script src="assets/vendors/owl-carousel/owl.carousel.js"></script>
+  <script src="assets/js/functions.js"></script>
+  <script src="assets/js/contact.js"></script>
+  <!-- <script src="assets/vendors/switcher/switcher.js"></script> -->
 </body>
 
 </html>
