--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="topbar-right">
                             <ul>
-                                <li><a href="register.html">Apply</a></li>
+                                <li><a href="apply.html">Apply</a></li>
                                 <li><a href="register.html">Students</a></li>
                                 <li><a href="register.html">Staff</a></li>
                             </ul>
@@ -86,11 +86,13 @@
                             <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" /></a>
                         </div>
                         <!-- Mobile Nav Button ==== -->
-                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button" data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
+                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
+                            data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
                         <!-- Author Nav ==== -->
                         <div class="secondary-menu">
                             <div class="secondary-inner">
@@ -107,8 +109,8 @@
                                     <!-- Search Button ==== -->
                                     <li class="search-btn">
                                         <button id="quik-search-btn" type="button" class="btn-link">
-                      <i class="fa fa-search"></i>
-                    </button>
+                                            <i class="fa fa-search"></i>
+                                        </button>
                                     </li>
                                 </ul>
                             </div>
@@ -116,7 +118,8 @@
                         <!-- Search Box ==== -->
                         <div class="nav-search-bar">
                             <form action="#">
-                                <input name="search" value="" type="text" class="form-control" placeholder="Type to search" />
+                                <input name="search" value="" type="text" class="form-control"
+                                    placeholder="Type to search" />
                                 <span><i class="ti-search"></i></span>
                             </form>
                             <span id="search-remove"><i class="ti-close"></i></span>
@@ -189,12 +192,14 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 m-b30">
                                 <div class="feature-container">
                                     <div class="feature-md text-white m-b20">
-                                        <a href="#" class="icon-cell"><img src="assets/images/icon/icon1.png" alt="" /></a>
+                                        <a href="#" class="icon-cell"><img src="assets/images/icon/icon1.png"
+                                                alt="" /></a>
                                     </div>
                                     <div class="icon-content">
                                         <h5 class="ttr-tilte">Our Vision</h5>
                                         <p>
-                                            To be the foremost theological institution training Christ-like leaders and academics that will tremendously impact the world positively.
+                                            To be the foremost theological institution training Christ-like leaders and
+                                            academics that will tremendously impact the world positively.
                                         </p>
                                     </div>
                                 </div>
@@ -202,12 +207,15 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 m-b30">
                                 <div class="feature-container">
                                     <div class="feature-md text-white m-b20">
-                                        <a href="#" class="icon-cell"><img src="assets/images/icon/icon2.png" alt="" /></a>
+                                        <a href="#" class="icon-cell"><img src="assets/images/icon/icon2.png"
+                                                alt="" /></a>
                                     </div>
                                     <div class="icon-content">
                                         <h5 class="ttr-tilte">Our Mission</h5>
                                         <p>
-                                            To expand the frontiers of knowledge in Christian religious education. To raise Christ-like graduates to employ technological and intercultural tools effectively and efficiently
+                                            To expand the frontiers of knowledge in Christian religious education. To
+                                            raise Christ-like graduates to employ technological and intercultural tools
+                                            effectively and efficiently
                                         </p>
                                     </div>
                                 </div>
@@ -253,8 +261,11 @@
                                     It is a long established fact that
                                 </h5>
                                 <p>
-                                    The Redeemed Christian Bible college, being the brain-child of the present General Overseer, Pastor E.A. Adeboye was founded by the authority of the Redeemed Christian church of God in September 1980. The Church is registered under the Land (Perpetual
-                                    Succession) of 1990. The College is at 1-5 Redemption Way (formerly 1a. Cemetery) Street. Ebute-Meta Lagos Nigeria.
+                                    The Redeemed Christian Bible college, being the brain-child of the present General
+                                    Overseer, Pastor E.A. Adeboye was founded by the authority of the Redeemed Christian
+                                    church of God in September 1980. The Church is registered under the Land (Perpetual
+                                    Succession) of 1990. The College is at 1-5 Redemption Way (formerly 1a. Cemetery)
+                                    Street. Ebute-Meta Lagos Nigeria.
                                 </p>
                                 <a href="#" class="btn">Read More</a>
                             </div>
@@ -262,7 +273,7 @@
                                 <div class="video-bx">
                                     <img src="assets/images/about/pic1.jpg" alt="" />
                                     <a href="https://www.youtube.com/watch?v=V_THjgFzPq0" class="popup-youtube video"><i
-                      class="fa fa-play"></i></a>
+                                            class="fa fa-play"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -312,7 +323,8 @@
                 </div>
                 <!-- Our Status END ==== -->
                 <!-- About Content ==== -->
-                <div class="section-area section-sp2 bg-fix ovbl-dark join-bx text-center" style="background-image: url(assets/images/background/bg1.jpg)">
+                <div class="section-area section-sp2 bg-fix ovbl-dark join-bx text-center"
+                    style="background-image: url(assets/images/background/bg1.jpg)">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
@@ -322,9 +334,15 @@
                                     </h2>
                                     <h4>Over <span class="counter">1000</span>+ Online Courses</h4>
                                     <p>
-                                        At the heart of our college is a commitment to deepening spiritual life, fostering intimate relationships with Jesus Christ, and developing well-rounded personalities. We provide comprehensive teaching in Bible Doctrines, Theology, Missions, Administration,
-                                        and other related subjects, emphasizing the Bible as the foundation for Christian life and work. Please feel free to contact us for further information. We look forward to welcoming you to the Redeemed Christian
-                                        Bible College family, where your educational and spiritual aspirations find a nurturing home.
+                                        At the heart of our college is a commitment to deepening spiritual life,
+                                        fostering intimate relationships with Jesus Christ, and developing well-rounded
+                                        personalities. We provide comprehensive teaching in Bible Doctrines, Theology,
+                                        Missions, Administration,
+                                        and other related subjects, emphasizing the Bible as the foundation for
+                                        Christian life and work. Please feel free to contact us for further information.
+                                        We look forward to welcoming you to the Redeemed Christian
+                                        Bible College family, where your educational and spiritual aspirations find a
+                                        nurturing home.
                                     </p>
                                     <a href="#" class="btn button-md">Join Now</a>
                                 </div>
@@ -358,7 +376,9 @@
                                     </div>
                                     <div class="testimonial-content">
                                         <p>
-                                            Studying Biblical Studies at RCBC was a profound intellectual and spiritual journey. The in-depth exploration of Bible doctrines and theology expanded my understanding of the Scriptures...
+                                            Studying Biblical Studies at RCBC was a profound intellectual and spiritual
+                                            journey. The in-depth exploration of Bible doctrines and theology expanded
+                                            my understanding of the Scriptures...
                                     </div>
                                 </div>
                             </div>
@@ -373,7 +393,9 @@
                                     </div>
                                     <div class="testimonial-content">
                                         <p>
-                                            Being part of the Missions and Outreach program at RCBC has been a profound experience. The college not only equipped me with the necessary skills for international missions but also instilled in me a deep sense ..
+                                            Being part of the Missions and Outreach program at RCBC has been a profound
+                                            experience. The college not only equipped me with the necessary skills for
+                                            international missions but also instilled in me a deep sense ..
                                         </p>
                                     </div>
                                 </div>
@@ -393,7 +415,8 @@
                     <div class="container">
                         <div class="d-flex align-items-stretch">
                             <div class="pt-logo mr-auto">
-                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt="" width="30%" /></a>
+                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
+                                        width="30%" /></a>
                             </div>
                             <!-- <div class="pt-social-link">
 							<ul class="list-inline m-a0">
@@ -418,12 +441,13 @@
                                     <form class="subscription-form" action="" method="post">
                                         <div class="ajax-message"></div>
                                         <div class="input-group">
-                                            <input name="email" required="required" class="form-control" placeholder="Your Email Address" type="email" />
+                                            <input name="email" required="required" class="form-control"
+                                                placeholder="Your Email Address" type="email" />
                                             <span class="input-group-btn">
-                        <button name="submit" value="Submit" type="submit" class="btn">
-                          <i class="fa fa-arrow-right"></i>
-                        </button>
-                      </span>
+                                                <button name="submit" value="Submit" type="submit" class="btn">
+                                                    <i class="fa fa-arrow-right"></i>
+                                                </button>
+                                            </span>
                                         </div>
                                     </form>
                                 </div>
@@ -468,28 +492,36 @@
                                 <h5 class="footer-title">Our Gallery</h5>
                                 <ul class="magnific-image">
                                     <li>
-                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic1.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic1.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic2.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic2.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic3.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic3.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic4.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic4.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic5.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic5.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic6.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic6.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic7.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic7.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic8.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic8.jpg" alt="" /></a>
                                     </li>
                                 </ul>
                             </div>
@@ -503,7 +535,7 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                             © Copyright 2023. All Rights Reserved. |
                             <a target="_blank" href="https://www.templateshub.net">
-                By CodesPro Solutions</a>
+                                By CodesPro Solutions</a>
                         </div>
                     </div>
                 </div>
